k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres

spec:
  selector:
    matchLabels:
      app: postgres

  replicas: 1

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.2-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service

metadata:
  name: postgres

  labels:
    app: postgres

spec:
  ports:
    - port: 5432

  selector:
    app: postgres
