k8s/service.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: moles
  namespace: default
  labels:
    app: moles

spec:
  selector:
    matchLabels:
      app: moles
  replicas: 1

  template:
    metadata:
      labels:
        app: moles

    spec:
      containers:
        - name: moles
          image: registry.daveroda.com/moles:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1

kind: Service
metadata:
  name: moles
  labels:
    app: moles
spec:
  ports:
    - name: http
      targetPort: 4000
      port: 4000

  selector:
    app: moles
